[Sema] SR-9851 - Add parens when needed for nil coalescing fixits

https://bugs.swift.org/browse/SR-9851